force-app/main/default/objects/Promoter_Revenue__c/Promoter_Revenue__c.object-meta.xml
<CustomObject>
    <label>Promoter Revenue</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Promoter Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>