force-app/main/default/objects/Promoter_Revenue__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Promoter Revenue</relationshipLabel>
    <relationshipName>Promoter_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>