force-app/main/default/objects/Promoter_Revenue__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>60</length>
    <type>Text</type>
</CustomField>