force-app/main/default/objects/Promoter_Revenue__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <length>60</length>
    <type>Text</type>
</CustomField>