force-app/main/default/objects/Promoter_Revenue__c/fields/Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue__c</fullName>
    <label>Sales Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>