force-app/main/default/objects/Promoter_Revenue__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Id</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Promoter Revenue</relationshipLabel>
    <relationshipName>Promoter_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>